# highway-ocd-benchmark

./: .gitignore  LICENSE  README.md  requirements.txt
benchmark/: __init__.py  algorithms.py  compare.py  make_full_coverage.py  metrics.py  metrics_impl.py
benchmark/experiments/: __init__.py  corpus.py  runners.py  sweep.py  tables.py
benchmark/highway/: VENDOR.md  __init__.py  build_highway.py  highway.py
benchmark/highway/highway_cpp/: CMakeLists.txt
benchmark/highway/highway_cpp/include/: anchors.hpp  config.hpp  csr.hpp  decode.hpp  graph_io.hpp  highway.hpp  propagation.hpp  refinement.hpp  utils.hpp
benchmark/highway/highway_cpp/src/: anchors.cpp  csr.cpp  decode.cpp  graph_io.cpp  highway.cpp  main.cpp  propagation.cpp  refinement.cpp
benchmark/paper_viz/: __init__.py  aggregation.py  specs.py  style.py
data/synthetic/abcdo2_N200/: graph.gpickle
data/synthetic/lfr_N200/: graph.gpickle
data/synthetic/overlap_abcdo2/eta1.0/g_abcd_o2_small_25b277d2016cb240/: graph.gpickle
data/synthetic/overlap_abcdo2/eta1.0/g_abcd_o2_small_316a7971cbe6c384/: graph.gpickle
data/synthetic/overlap_abcdo2/eta1.0/g_abcd_o2_small_3a0f1e2d316306a2/: graph.gpickle
data/synthetic/overlap_abcdo2/eta1.0/g_abcd_o2_small_40e658e2a25f960e/: graph.gpickle
data/synthetic/overlap_abcdo2/eta1.0/g_abcd_o2_small_63d872c1bb121455/: graph.gpickle
data/synthetic/overlap_abcdo2/eta1.5/g_abcd_o2_small_126aee265fb8554d/: graph.gpickle
examples/: add_your_algorithm.py  quickstart.ipynb  run_experiments.py  run_realworld.py  run_synthetic.py
(+43 files in other folders)
